...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ingredients" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_ingredients_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardColor"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_detail_ingredients_recycler_view" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_steps_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardColor"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
...
