<resources>
    <string name="app_name">Bake Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="brownies">Brownies</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="nutella_pie">Nutella Pie</string>
    <string name="yellow_cake">Yellow Cake</string>
    <string name="serverUrl">https://d17h27t6h515a5.cloudfront.net/topher/2017/May/59121517_baking/baking.json</string>
    <string name="recipes">RECIPES</string>
    <string name="check_connection">Please check internet connection to continue</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="error_network">Error processing network request</string>
    <string name="bulletPoint">\u2022</string>
    <string name="commaPoint">, </string>
    <string name="instruction">Click on the logo to select a recipe.</string>
    <string name="empty_video">Recipe detail and video will display here</string>
    <string name="appwidget_text">YOUR RECIPE HERE</string>
    <string name="select_widget">Select recipe widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
